<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.BookDetails">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_chevron_left_24"
            android:padding="5dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:id="@+id/back_icon"
            android:contentDescription="@string/back"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            >
            <ImageView
                android:layout_width="200dp"
                android:layout_height="250dp"
                android:background="@drawable/image_rounded_bg"
                android:layout_gravity="center"
                android:id="@+id/image"
                android:contentDescription="@string/demo_description"
                android:layout_marginVertical="10dp"
                android:scaleType="centerCrop"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/demo_title"
                android:id="@+id/title"
                android:textSize="32sp"
                android:gravity="center"
                android:fontFamily="@font/poppins_semi_bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/demo_author"
                android:gravity="center"
                android:id="@+id/author"
                android:fontFamily="@font/poppins_semi_bold"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:weightSum="4"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        android:gravity="center"
                        android:fontFamily="@font/poppins_semi_bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/demo_rating"
                        android:id="@+id/rating"
                        android:fontFamily="@font/poppins_regular"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/language"
                        android:gravity="center"
                        android:fontFamily="@font/poppins_semi_bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/demo_language"
                        android:id="@+id/language"
                        android:fontFamily="@font/poppins_regular"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pages"
                        android:gravity="center"
                        android:fontFamily="@font/poppins_semi_bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/demo_pages"
                        android:id="@+id/pages"
                        android:fontFamily="@font/poppins_regular"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/year"
                        android:gravity="center"
                        android:fontFamily="@font/poppins_semi_bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/demo_year"
                        android:id="@+id/year"
                        android:fontFamily="@font/poppins_regular"
                        />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:fontFamily="@font/poppins_semi_bold"
                android:paddingBottom="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/description"
                android:textSize="16sp"
                android:justificationMode="inter_word"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/persephone_is_the_goddess_of_spring_by_title_only_the_truth_is_since_she_was_a_little_girl_flowers_have_shriveled_at_her_touch_after_moving_to_new_athens_she_hopes_to_lead_an_unassuming_life_disguised_as_a_mortal_journalist_hades_god_of_the_dead_has_built_a_gambling_empire_in_the_mortal_world_and_his_favorite_bets_are_rumored_to_be_impossible_after_a_chance_encounter_with_hades_persephone_finds_herself_in_a_contract_with_the_god_of_the_dead_and_the_terms_are_impossible_persephone_must_create_life_in_the_underworld_or_lose_her_freedom_forever_the_bet_does_more_than_expose_persephone_s_failure_as_a_goddess_however_as_she_struggles_to_sow_the_seeds_of_her_freedom_love_for_the_god_of_the_dead_grows_and_it_s_forbidden"
                tools:targetApi="o" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>