<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="125dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginEnd="5dp"
    android:padding="5dp"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/image_rounded_bg"
        android:id="@+id/image"
        android:scaleType="centerCrop"
        android:contentDescription="@string/demo_description" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo_title"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_semi_bold"
            android:id="@+id/title"
            android:textSize="14sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo_author"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_regular"
            android:id="@+id/author"
            />
</LinearLayout>