<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appName"
        android:textAlignment="center"
        android:textSize="30sp"
        android:fontFamily="@font/dancing_script_bold"
        android:textColor="@color/black"
        android:paddingVertical="10dp"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_hint"
                android:autofillHints="@string/search_hint"
                android:inputType="text"
                android:background="@drawable/rounded_bg"
                android:padding="15dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="16sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/popular_books"
                android:textSize="20sp"
                android:paddingVertical="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                android:id="@+id/popular_books"
                tools:listitem="@layout/book_item"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/free_books"
                android:textSize="20sp"
                android:paddingVertical="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/free_books"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/book_item" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/paid_books"
                android:textSize="20sp"
                android:paddingVertical="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                android:id="@+id/paid_books"
                tools:listitem="@layout/book_item"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>